--- a/index.css
+++ b/index.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: 'Oswald', sans-serif;
+}
+
 :root {
   --light-bg-color: #FDFFFC;
   --dark-bg-color: #18435A;
