--- a/index.css
+++ b/index.css
@@ -150,3 +150,15 @@ footer {
   margin: auto;
   text-align: center;
 }
+
+@media screen and (min-width: 640px) {
+  main {
+    width: 480px;
+    margin: auto;
+  }
+
+  footer {
+    width: 480px;
+    left: calc((100% - 480px) / 2);
+  }
+}
